fixed overlapping & colours

--- a/src/components/search_bar/SearchedUser.css
+++ b/src/components/search_bar/SearchedUser.css
@@ -31,7 +31,7 @@
 }
 .position_in_searchDropdown {
   padding-top: 5px;
-  color: rgb(0, 0, 0, 0.9);
+  color: rgb(0, 0, 0, 0.8);
   font-weight: bold !important;
   text-transform: capitalize;
   line-height: 8px;
@@ -40,7 +40,7 @@
 
 .email_in_searchDropDown {
   padding-top: 5px;
-  color: rgb(0, 0, 0, 0.9);
+  color: rgb(0, 0, 0, 0.8);
   font-weight: bold !important;
   line-height: 8px;
 }
